# UCGretina

./: .gitignore  CMakeLists.txt  README.md  UCGretina.cc  UCGretina_LH.cc  UCGretina_LH_Pol.cc  UCGretina_Pol.cc  UCGretina_Scan.cc  UCGretina_Scan_Pol.cc
include/: DetectorConstruction.hh  EventAction.hh  EventAction_Messenger.hh  FAUSTDetectorConstruction.hh  FAUSTPixelToCoordinates.hh  FAUSTS1annaularD.hh  FAUSTSteppingAction.hh  FAUSTTrapPixel.hh  FAUSTVertical_strip_sol.hh  FAUST_S3rings_Parameterisation.hh  FAUSTmyGlobalVariables.hh  Git_Hash.hh  Git_Hash.hh.in  PrimaryGeneratorAction.hh  PrimaryVertexInformation.hh  SteppingAction.hh
src/: AngularDistribution.cc  DetectorConstruction.cc  EventAction.cc  EventAction_Messenger.cc  FAUSTDetectorConstruction.cc  FAUSTPixelToCoordinates.cc  FAUSTS1annularD.cc  FAUSTTrapPixel.cc  FAUSTVertical_strip_sol.cc  FAUST_S3rings_Parameterisation.cc  FAUSTmyGlobalVariables.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryVertexInformation.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc  VisManager.cc
vis/: trajectories.mac  vis.mac  visGreta.mac  visLH.mac  visScan.mac
